# FLH-Prompt

./: .gitignore  README.md  pyproject.toml  test_expert_selection.py
configs/: default.yaml
flh_prompts/: __init__.py  cli.py  vision_cli.py
flh_prompts/baselines/: __init__.py  fixed_random.py  input_similarity.py  single_prompt.py
flh_prompts/data/: __init__.py  streaming.py  streaming_vision.py
flh_prompts/evaluation/: __init__.py  metrics.py  plotting.py
flh_prompts/models/: __init__.py  flh_pool.py  frozen_backbone.py  frozen_vit.py
flh_prompts/training/: __init__.py  trainer.py  vision_trainer.py
results/: alpha_ablation.json
