[project]
name = "flh-prompts"
version = "0.1.0"
description = "Fixed-share with Learned History (FLH) prompt pooling for continual learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.35",
    "peft>=0.7",
    "datasets>=2.15",
    "wandb>=0.16",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
flh = "flh_prompts.cli:app"
flh-vision = "flh_prompts.vision_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
